# dynamic_load

./: .gitignore  CMakeLists.txt  README.md
sample/: CMakeLists.txt  avx_test.cpp  optimize_gray_align_mem.cu  optimize_gray_trans.cu  optimize_gray_trans_batch.cu  sum_kernel.cu  test_load.cpp  test_run_python.cpp
script/: LeNet_pycaffe.ipynb  cluster.py  python_plt.ipynb  scan_files.py  show_image_python.py  test_python_argparser.py  test_python_os.py  test_python_subprocess.py
src/: CMakeLists.txt  tools.cpp  tools.h
